# tinyfs-rs

./: .gitignore  Cargo.toml  Makefile  README.md  demo.disk  filesystem-test.ansi  split-lines.py
src/: disk.rs  lib.rs  main.rs  structures.rs
