[package]
name = "tinyfs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.71"
bincode = "1.3.3"
image = { version = "0.24.6", default-features = false, features = ["jpeg"] }
serde = { version = "1.0.163", features = ["derive"] }
serde-big-array = "0.5.1"
tempfile = "3.5.0"
thiserror = "1.0.40"
